alpm-types/src/snapshots/env::invalid_makepkg_option@case_2.snap
---
source: alpm-types/src/env.rs
---
error: invalid makepkg option
 | 
 | #somethingelse
 | ^ expected `!`
